# TeamBench

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
generators/: __init__.py  base.py  gen_api1_version_compat.py  gen_cr2_style_enforce.py  gen_cr3_perf_review.py  gen_cr4_api_review.py  gen_d1_schema_drift.py  gen_d3_schema_migration.py  gen_d4_data_pipeline.py  gen_inc3_memory_leak.py  gen_inc4_dns_miscfg.py  gen_inc5_cert_expiry.py  gen_infra2_cicd_repair.py  gen_ir3_multi_source.py  gen_lh3_multi_service.py  gen_multi2_api_frontend.py  gen_neg2_cost_perf.py  gen_o3_log_analysis.py  gen_o4_monitoring.py  gen_p3_access_control.py  gen_p4_data_retention.py  gen_pipe2_api_gateway.py  gen_s3_refactor_extract.py  gen_s4_backward_compat.py  gen_sec3_crypto_upgrade.py  gen_sec4_input_validation.py  gen_sec5_secrets_rotation.py  gen_sec6_csrf_protection.py  gen_sec7_rate_limiting.py  gen_spec3_data_model.py  gen_spec4_migration.py  gen_test2_regression.py  gen_test3_integration.py  gen_ts1_type_mismatch.py  primitives.py  registry.py
harness/: ablation.py  agent_interface.py  agent_loop.py  analysis.py  batch_runner.py  benchmark_stats.py  cli.py  compute_tni.py  gemini_adapter.py  grade_task.py  orchestrator.py  paper_figures.py  paper_tables.py  plot_results.py  run_agent.py  run_all.py  run_task.py  schemas.py  utils.py
leaderboard/: aggregate.py  app.py  schema.json
paper/: EXPERIMENT_FACTSHEET.md
scripts/: generate_paper.sh  run_ea_experiment.sh
shared/: ablation_10task.json  ablation_5task.json  ablation_preliminary.json  (+2 more)
(+517 files in other folders)
