[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "teambench"
version = "0.1.0"
description = "A benchmark for evaluating multi-agent LLM teamwork through OS-enforced role separation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["google-genai>=1.0", "openai>=1.0", "anthropic>=0.20"]
analysis = ["matplotlib>=3.8", "numpy>=1.24"]
dev = ["pytest>=7.0", "pyyaml>=6.0"]

[project.scripts]
teambench = "harness.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
